Update IconPrimaryLogo to contain the company name, change title and favicon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <!-- End Google Fonts -->
-    <title>Vite App</title>
+    <title>Centiment | Better respondents, better data</title>
   </head>
   <body>
     <div id="app"></div>
